[taotao-cloud-project-1268] fix[SupderEntity SuperService SuperController]